# toolkit

./: README.en.md  README.md  dev-toolkit.ipynb  image_reorganizer.py  main.py  pyproject.toml  screenshot_tui.py
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  advanced-screenshot-management.md
scripts/: batch_png_optimizer.py  image-reorg  screenshot-org  toolkit
tests/: __init__.py
tests/test_image/: __init__.py  test_reorganizer.py
tests/test_screenshot/: __init__.py
tools/: __init__.py
tools/image/: __init__.py  reorganizer.py
tools/screenshot/: __init__.py  organizer.py  tui.py
